samples/_failures_safe/1761635754_a6ad2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fb2b7ca.c: In function ‘main’:
./samples/SAFE/__tmp_2fb2b7ca.c:144:9: error: expected declaration or statement at end of input
  144 |         printf("\nVerification: FAILED - Data does not match original\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2fb2b7ca.c:144:9: error: expected declaration or statement at end of input
